# crossover-wine-ci

./: build_with_macports.sh
.github/workflows/: macports.yml
sources/cabextract/: .gitignore
sources/dxvk/: .cxlab-ci.yml  dxvk.conf
sources/dxvk/cxlab/: build.yml  image.docker  image.yml  release.yml
sources/dxvk/src/d3d11/: d3d11_options.cpp  d3d11_swapchain.cpp  d3d11_texture.cpp
sources/dxvk/src/dxbc/: dxbc_compiler.cpp  dxbc_options.cpp  dxbc_options.h
sources/dxvk/src/dxvk/: dxvk_adapter.cpp  dxvk_context.cpp  dxvk_context.h  dxvk_image.cpp  dxvk_state_cache.cpp  dxvk_state_cache.h
sources/dxvk/src/vulkan/: vulkan_presenter.cpp
sources/ghostscript/ghostscript/: ChangeLog  LICENSE.Unicode  Makefile.in  NEWS  README  configure  configure.ac  libtool
sources/ghostscript/ghostscript/base/: contrib.mak  devs.mak  gdevmac.c  gdevphex.c  gdevupd.c  gdevwep24pin.c  gdevwep9pin.c  gs.mak  gscdef.c  gscdefs.h  gsmisc.c  lib.mak  macos-mcp.mak  macosx.mak  msvclib.mak  openvms.mak  openvms.mmk  std.h  unix-gcc.mak  unixansi.mak  unixlink.mak  whitelst.c
sources/ghostscript/ghostscript/contrib/: contrib.mak
sources/ghostscript/ghostscript/doc/: version.texi
sources/ghostscript/ghostscript/jasper/: Makefile.in
sources/ghostscript/ghostscript/lib/: rollconv.ps
sources/ghostscript/ghostscript/psi/: dmmain.r  imainarg.c  os2.mak
sources/gnutls/gmp/: Makefile.in
sources/gnutls/gnutls/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  aminclude_static.am  config.h.in  configure  configure.ac
sources/gnutls/gnutls/build-aux/: ltmain.sh
sources/gnutls/gnutls/doc/: Makefile.in  abstract-api.texi  algorithms.texi  compat-api.texi  dane-api.texi  enums.texi  gnutls-api.texi  gnutls.html  invoke-certtool.texi  invoke-gnutls-cli-debug.texi  invoke-gnutls-cli.texi  invoke-gnutls-serv.texi  invoke-ocsptool.texi  pkcs11-api.texi  stamp-vti  x509-api.texi
sources/gnutls/gnutls/extra/: Makefile.in
sources/gnutls/gnutls/fuzz/: Makefile.in
sources/gnutls/gnutls/gl/: Makefile.am  Makefile.in  stdio-impl.h
sources/gnutls/gnutls/lib/: Makefile.in  priority_options.h
sources/gnutls/gnutls/libdane/: Makefile.in
sources/gnutls/gnutls/m4/: gnulib-comp.m4  hooks.m4
sources/gnutls/gnutls/po/: cs.po  de.po  eo.po  es.po  fi.po  fr.po  gnutls.pot  it.po  ka.po  ms.po  nl.po  pl.po  pt_BR.po  ro.po  sr.po  sv.po  uk.po  vi.po  (+1 more)
sources/htmltextview/: htmltextview.py
sources/makedep/: .gitignore  makedep.c
sources/moltenvk/: fetchDependencies
sources/moltenvk/ExternalRevisions/: SPIRV-Cross_repo_revision
sources/moltenvk/MoltenVKPackaging.xcodeproj/: project.pbxproj
sources/vkd3d/: .editorconfig  ANNOUNCE  ChangeLog.md  Doxyfile.in  Makefile.am  README  configure.ac
sources/vkd3d/demos/: demo.h  demo_d3d12.h  demo_macos.h  demo_vkd3d.h  demo_win32.h  demo_xcb.h  etl16-unicode.h  gears.c  gears.hlsl  make_objc  teapot.c  teapot.h  teapot.hlsl  text.hlsl  triangle.c  triangle.hlsl
sources/vkd3d/gitlab/: build-linux  build-mac  build-mingw  build.yml  image.docker  image.yml  test.yml
sources/vkd3d/include/: vkd3d.h  vkd3d_d3d12.idl  vkd3d_dxgi.idl  vkd3d_dxgibase.idl  vkd3d_utils.h
sources/vkd3d/include/private/: appkit.json  foundation.json  quartzcore.json  spirv.core.grammar.json  vkd3d_common.h  vkd3d_test.h
sources/vkd3d/libs/vkd3d/: command.c  device.c  resource.c  utils.c  vkd3d.map  vkd3d_private.h
sources/vkd3d/libs/vkd3d-common/: error.c
sources/vkd3d/libs/vkd3d-shader/: d3d_asm.c  dxil.c  glsl.c  hlsl.h  hlsl_codegen.c  ir.c  make_spirv  preproc.h  spirv.c  vkd3d_shader_main.c  vkd3d_shader_private.h
sources/vkd3d/libs/vkd3d-utils/: reflection.c  vkd3d_utils.map  vkd3d_utils_main.c
sources/vkd3d/m4/: check-cflags.m4  check-perl-module.m4  check-pthread.m4  widl.m4
sources/vkd3d/programs/vkd3d-compiler/: main.c
sources/vkd3d/tests/: d3d12.c  d3d12_crosstest.h  d3d12_invalid_usage.c  d3d12_test_utils.h  hlsl_d3d12.c  preproc-macro.shader_test  shader_runner.c  shader_runner.h  shader_runner_d3d11.c  shader_runner_d3d12.c  shader_runner_d3d9.c  shader_runner_gl.c  shader_runner_metal.m  shader_runner_vulkan.c  test-driver.sh  utils.h  vkd3d_api.c  vkd3d_shader_api.c  vulkan_procs.h  vulkan_utils.h
sources/vkd3d/tests/hlsl/: abs.shader_test  all.shader_test  alpha-test.shader_test  angle-unit.shader_test  any.shader_test  arithmetic-float-uniform.shader_test  arithmetic-float.shader_test  arithmetic-int-uniform.shader_test  arithmetic-int.shader_test  arithmetic-uint.shader_test  array-dimension.shader_test  array-parameters.shader_test  array-size-expr.shader_test  asint.shader_test  attributes.shader_test  barriers.shader_test  bitwise-assignment.shader_test  bitwise.shader_test  bool-cast.shader_test  bool-semantics.shader_test  calculate-lod.shader_test  cast-64-bit.shader_test  cast-broadcast.shader_test  cast-componentwise-compatible.shader_test  cast-componentwise-equal.shader_test  cast-to-float.shader_test  cast-to-half.shader_test  cast-to-int.shader_test  cast-to-uint.shader_test  cbuffer.shader_test  ceil.shader_test  cf-cond-types.shader_test  clamp.shader_test  clip-cull-distance.shader_test  clip-planes.shader_test  clip.shader_test  combined-samplers.shader_test  comma.shader_test  compute.shader_test  conditional.shader_test  (+228 more)
sources/wine/: configure  configure.ac
sources/wine/include/: config.h.in  mshtml.idl  ntuser.h
sources/wine/loader/: main.c  wine.inf.in
sources/wine/po/: Makefile.in  ar.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_US.po  eo.po  es.po  fa.po  fi.po  fr.po  he.po  hi.po  hr.po  hu.po  it.po  ja.po  ka.po  ko.po  lt.po  ml.po  nb_NO.po  nl.po  or.po  pa.po  pl.po  pt_BR.po  pt_PT.po  rm.po  ro.po  ru.po  si.po  sk.po  sl.po  sr_RS@cyrillic.po  (+11 more)
sources/wine/server/: Makefile.in  change.c  console.c  device.c  esync.c  esync.h  event.c  fd.c  file.h  main.c  mapping.c  msync.c  named_pipe.c  object.h  process.c  protocol.def  queue.c  registry.c  request_handlers.h  request_trace.h  sock.c  thread.c  thread.h  timer.c  window.c
sources/wine/tools/: makedep.c
(+324 files in other folders)
